--- a/src/components/login-page/login-page.module.scss
+++ b/src/components/login-page/login-page.module.scss
@@ -12,12 +12,12 @@
 }
 
 .wel {
-    margin-left: 30px;
+    margin-left: 200px;
     margin-right: 350px;
     text-align: center;
     margin-top: 20px;
     color: white;
-    width: 50%;
+    width: 30%;
 }
 
 .h3 {
@@ -63,7 +63,7 @@
 .from {
     display: flex;
     flex-direction: column;
-    margin-left: 400px;
+    margin-left: 200px;
     margin-right: 200px;
     padding: 15px;
 }
@@ -72,8 +72,8 @@
     height: 7vh;
     text-align: center;
     border: 1px solid black;
-    width: 50%;
     background-color: #C8C8C8;
+    width: 100%;
 }
 
 .nam {
@@ -82,23 +82,41 @@
     font-size: 25px;
     font-weight: 600;
     color: white;
-    text-align: center;
+    text-align: start;
+    align-self: start;
 }
 
 .vh {
-    margin-left: 350px;
-    margin-right: 250px;
-    font-size: 25px;
+    font-size: 45px;
     font-weight: 300;
     color: white;
+    padding-top: 20px;
+    width: 500px;
+    text-align: center;
+    margin: 3px 3px 3px 250px;
 }
 
 .butto {
-    background-color: #B1AEAE;
+    background-color: transparent;
+    width: 200px;
+    height: 70px;
+    text-align: center;
+    margin-left: 200px;
+    border-radius: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-image: linear-gradient(180deg, #27D0C4 0%, rgba(255, 255, 255, 0) 100%);
+    background-position: 0%;
+    background-size: auto;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-origin: padding-box;
+    background-clip: border-box;
+    color: #FFFFFF;
 }
 
 .viv {
-    height: 20vh;
+    height: 10vh;
     width: 15%;
     background-repeat: no-repeat;
     background-image: url('https://pbs.twimg.com/media/FbgSb81WYAIjMpV.png');
@@ -114,4 +132,5 @@
 .log {
     display: flex;
     flex-direction: row;
+    height: 10vh;
 }
