--- a/src/pages/Homepage/css/index.css
+++ b/src/pages/Homepage/css/index.css
@@ -183,6 +183,7 @@
     cursor: pointer;
     width: 100%;
   }
+
   
 
   /*Missing grade*/
@@ -190,6 +191,70 @@
   .missing{
     background-color: #846ff7;
   }
+/*Frequently Asked Questions*/
+.contain{
+  width: 100%;
+  height:100%;
  
+justify-content:center; 
+position: relative;
+display: flex;
+margin-top:10% ;
+}
 
+.card{
+  height: 300px;
+  width:350px;
+  margin: 10px 10px;
+  padding: 10px ;
+  background-color: rgb(235, 234, 234);
+}
+.questions{
+  text-align: center;
+
+}
+.loginn-form {
+  background-color: #ffffff;
+  padding: 20px;
+ justify-content: center;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(94, 94, 94, 0.6);
+  width: 400px;
+  margin-left: 5%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ 
+}
+.loginn-form h2 {
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.loginn-form label {
+  display: block;
+  margin-bottom: 8px;
+
+}
+
+.loginn-form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 12px;
+  box-sizing: border-box;
+  border-color: #846ff7;
+}
+
+.loginn-form button {
+  background-color: #846ff7;
+  color: #ffffff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+textarea {
+    height: 120px;
+    width: 350px;
+}
 
