--- a/my-react-app/src/Components/Technical/technical.css
+++ b/my-react-app/src/Components/Technical/technical.css
@@ -1,14 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+   /* box-sizing: border-box;*/
   }
   div {
     max-width: 500px;
     margin: 50px auto;
     padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
+   /* border: 1px solid #ccc;
+    border-radius: 8px;*/
   }
   h2 {
     text-align: center;
@@ -20,7 +20,6 @@
     font-weight: bold;
   }
   input{
-    width: 100%;
     padding: 8px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
