--- a/my-react-app/src/Components/Login/login.css
+++ b/my-react-app/src/Components/Login/login.css
@@ -73,8 +73,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 150px;
-  height: 59px;
+  width: 100px;
+  height: 20px;
   color: white;
   background: blueviolet;
   border-radius: 50px;
@@ -83,5 +83,5 @@
   cursor: pointer;
 }
 .submit:hover{
-  background-color: goldenrod;
+  background-color: white;
 }
