--- a/frontend-grading-assignment/src/components/Login/Login.css
+++ b/frontend-grading-assignment/src/components/Login/Login.css
@@ -1,3 +1,19 @@
+.login-container {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.login-img {
+  width: 80%;
+  height: 80%;
+  margin-left: 30px;
+  object-fit: cover;
+}
+
 .container {
   display: flex;
   flex-direction: column;
