--- a/frontend-grading-assignment/src/components/SchoolInfo/SchoolInfo.css
+++ b/frontend-grading-assignment/src/components/SchoolInfo/SchoolInfo.css
@@ -8,6 +8,8 @@
 }
 
 .first-des {
+  font-size: 1.5rem;
+  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -15,6 +17,8 @@
 }
 
 .first-des-reverse {
+  font-size: 1.7rem;
+  font-weight: 600;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
