Work on the Help page and also make some changes to the footer and header files. Implement a contact form in the Help page on next code.

--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -42,6 +42,12 @@
   .custom-link{
     @apply text-blue-500 italic
   }
+  .custom-header{
+    @apply text-xl text-emerald-950 italic
+  }
+  .text-size{
+    @apply text-lg
+  }
 }
 
 .slide-text {
