--- a/gradepal/src/components/InstructorContactPage/InstructorContactPage.css
+++ b/gradepal/src/components/InstructorContactPage/InstructorContactPage.css
@@ -37,11 +37,11 @@
 
 .instructors-list strong {
   font-size: 18px;
-  color: #3498db;
+  color: #153d6f;
 }
 
 .instructors-list button {
-  background-color: #3498db;
+  background-color: #153d6f;
   color: #fff;
   padding: 10px;
   border: none;
