--- a/gradepal/src/components/MissingGradeFormPage/MissingGradeFormPage.css
+++ b/gradepal/src/components/MissingGradeFormPage/MissingGradeFormPage.css
@@ -44,7 +44,7 @@ textarea {
 .submit-button {
   width: 100%;
   padding: 10px;
-  background-color: #3498db;
+  background-color: #153d6f;
   color: #fff;
   border: none;
   border-radius: 5px;
