--- a/gradepal/src/components/footer/footer.css
+++ b/gradepal/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #3498db;
+    background-color: #153d6f ;
     text-align: center;
     padding: 10px;
     position: fixed;
