--- a/gradepal/src/components/login/loginpage.css
+++ b/gradepal/src/components/login/loginpage.css
@@ -29,7 +29,7 @@
 .login-button {
   width: 96%;
   padding: 10px;
-  background-color: #3498db;
+  background-color: #153d6f;
   color: #fff;
   border: none;
   border-radius: 5px;
