--- a/gradepal/src/components/HelpAndSupportPage/HelpAndSupportPage.css
+++ b/gradepal/src/components/HelpAndSupportPage/HelpAndSupportPage.css
@@ -75,7 +75,7 @@ textarea {
 .submit-button {
   width: 100%;
   padding: 10px;
-  background-color: #3498db;
+  background-color: #153d6f ;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -84,5 +84,5 @@ textarea {
 }
 
 .submit-button:hover {
-  background-color: #2980b9;
+  background-color: #153d6f ;
 }
