--- a/gradepal/src/components/Navigation/navbar.css
+++ b/gradepal/src/components/Navigation/navbar.css
@@ -1,7 +1,4 @@
 .header {
-  /* display: flex;
-  flex-direction: row; */
-  /* justify-content: space-between; */
   position: fixed;
   z-index: 1000;
   top: 0;
@@ -42,31 +39,19 @@ li {
 
 a {
   text-decoration: none;
-  color: #ecf0f1;
+  color: #b5975d;
   font-weight: bold;
   font-size: 16px;
-  transition: color 0.3s ease; /* Smooth color transition on hover */
+  transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #2c3e50;
+  color: white;
 }
 
 h1 {
   display: flex;
   margin-top: 0px;
-}
-
-.a {
-  color: red;
-}
-
-.b {
-  color: white;
-}
-
-.c {
-  color: black;
 }
 
 @media only screen and (max-width: 600px) {
@@ -102,6 +87,10 @@ h1 {
 
   .ab {
     display: none;
+  }
+
+  .logo {
+    margin-right: 80px;
   }
 }
 
