--- a/gradepal/src/components/footer/footer.css
+++ b/gradepal/src/components/footer/footer.css
@@ -7,20 +7,7 @@
     width: 98.5%;
   }
 
-  /* @media only screen and (min-width: 200px) and (max-width: 500px) {
-    .footer {
-      width: 95%;
-    }
+  .footer p {
+    color: #b5975d;
+    font-weight: bolder;
   }
-
-  @media only screen and (max-width: 600px) {
-    .footer {
-      width: 96%;
-  }
-}
-
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
-  .footer {
-    width: 96.5%;
-  }
-} */
