--- a/gradepal/src/components/landingPage/landingpage.css
+++ b/gradepal/src/components/landingPage/landingpage.css
@@ -1,10 +1,7 @@
-/* src/components/landingPage/LandingPage.css */
-
 .container {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  /* text-align: center; */
 }
 
 .heading {
@@ -21,6 +18,7 @@
   color: #b5975d;
   margin-bottom: 30px;
   text-align: center;
+  font-weight: bold;
 }
 
 .features {
@@ -55,8 +53,8 @@
   width: 100%;
   height: 600px;
   margin-top: 20px;
-  border-radius: 8px; /* Optional: Add border-radius for rounded corners */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle box shadow */
+  border-radius: 8px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Media query for small screens */
@@ -82,6 +80,8 @@
   .feature-description {
     font-size: 14px;
   }
+
+  
 }
 
 /* Media query for medium screens */
