--- a/missing-grade-reporting-system/src/Components/Dashboard-Page/dashboardPage.css
+++ b/missing-grade-reporting-system/src/Components/Dashboard-Page/dashboardPage.css
@@ -3,23 +3,55 @@
   width: 1300px;
   margin: auto;
   text-align: center;
-  align-items: center;
+}
+
+#level100-section {
+  margin-top: 50px;
+}
+
+.level200-section {
+  margin-top: 90px;
 }
 
 .level100-div,
 .level200-div {
   display: flex;
   align-items: center;
-  text-align: center;
-  padding-left: 180px;
+  justify-content: center;
 }
+
+.level200-div table {
+  margin-right: 100px;
+  margin-left: 100px;
+  justify-content: space-between;
+}
+
+.level100-div table {
+  margin-right: 100px;
+  margin-left: 100px;
+  justify-content: space-between;
+}
+
+.level100-div .semester-table {
+  margin-bottom: 20px; /* Adjust the margin as needed */
+}
+
 
 .blinking-red {
-  animation: blinking-red-animation 1s infinite;
+  animation: blink 1s infinite;
 }
 
-@keyframes blinking-red-animation {
+@keyframes blink {
   50% {
-    opacity: 0;
+    background-color: red;
+    color: white;
   }
+}
+
+.missing-grade {
+  display: inline-block;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: red;
+  color: white;
 }
