--- a/missing-grade-reporting-system/src/Components/Login-Page/login.css
+++ b/missing-grade-reporting-system/src/Components/Login-Page/login.css
@@ -2,13 +2,33 @@
   display: flex;
 }
 
-.img-container {
-  
+.ug-logo {
+  position: relative;
+  width: 100%;
+  height: 100%; 
 }
 
-.ug-logo {
-  height: 700px;
-  width: 700px;
+.ug-logo::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(199, 175, 187, 0.7), rgba(105, 87, 95, 0.4)); 
+  z-index: 1;
+}
+
+.logo-text {
+  position: absolute;
+  top: 8%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(255, 255, 255); 
+  font-size: 1.3rem; 
+  font-weight: 1000;
+  text-align: center;
+  z-index: 2;
 }
 
 .login-container {
@@ -112,6 +132,15 @@
     justify-content: center;
 }
 
+.submit-container a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.submit-container a:hover {
+  color: #c5c4c4;
+}
+
 .login-button {
     display: flex;
     align-items: center;
@@ -120,10 +149,15 @@
     height: 45px;
     color: white;
     font-size: 19px;
-    background: #eccf81;
+    background: #920243;
     font-weight: 700;
     border-radius: 50px;
     cursor: pointer;
+}
+
+.login-button:hover {
+  color: #fff;
+  background: #d76b9c;
 }
 
 .gray {
