--- a/assignment_work/src/Components/homepage/homepage.css
+++ b/assignment_work/src/Components/homepage/homepage.css
@@ -1,10 +1,10 @@
 /* App.css */
 
-.container {
+.container-home {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;;
   }
   
   header {
