--- a/assignment_work/src/Components/LoginPage/LoginPage.css
+++ b/assignment_work/src/Components/LoginPage/LoginPage.css
@@ -35,6 +35,10 @@
     background-color: #007bff;
     color: #fff;
     cursor: pointer;
+    height: 35px;
+    border-radius: 30px;
+    margin-top: 20px;
+    box-shadow: 0px 5px 15px 0px rgba(28, 0, 181, 0.3);
   }
   
   button:hover {
