--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,6 +1,12 @@
 *{
   margin: 0;
   padding: 0;
+  color: #2196F3;
+  
+
+
+  
+
   
 }
 a {
@@ -11,10 +17,13 @@ a {
   box-sizing: border-box;
   width: 250px;
   height: 700px;
-  border: 1px solid black;
   display: inline-block;
+;
+  
+  
   
 }
+
 
 h1 img{
   width: 240px;
@@ -33,17 +42,25 @@ h1 img{
 .Header-container{
   display: flex;
   justify-content: space-between;
-  margin-right: 20px;
+  margin-left: 20px;
+  color: #fff;
+
+  
+  
+
+
 }
 .Header-container ul{
   display: flex;
   gap: 2rem;
   list-style: none;
+  
 }
 .Header-container input{
   width: 700px;
   height: 30px;
   border-radius: 15px;
+  border: none;
   
 }
 .Header-container li img{
@@ -52,3 +69,62 @@ h1 img{
 .home-content{
   display: inline;
 }
+.flexer{
+  display: flex;
+}
+
+.container12{
+  display: flex;
+  justify-content: space-between;
+  gap: 6rem;
+}
+.contact input{
+  font-weight: bold;
+  margin-bottom: 10px;
+  width: 300px;
+  border-radius: 20px;
+  
+  
+}
+.contact li{
+  list-style: none;
+}
+.address img{
+  width: 30px;
+}
+
+.home-content{
+  box-sizing: border-box;
+  background-color: lightgray;
+
+
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  margin: 10px;
+  justify-content: space-between;
+
+  
+  
+   
+}
+.grid img{
+  width: 250px;
+  height: 200px;
+}
+.grid div{
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 10px;
+  text-align: center;
+  margin: 10px;
+  
+
+}
+.welcome h1{
+  color: rgba(11, 186, 230, 0.795);
+}
+
+  
+
