--- a/react-app/src/Components/Contactx.css
+++ b/react-app/src/Components/Contactx.css
@@ -1,60 +1,101 @@
+:root {
+  --primary-color: #f39c12;
+  --secondary-color: #ffecb3;
+  --font-family: "Open Sans", sans-serif;
+  --base-font-size: 16px; 
+}
+
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    background-color: #ffecb3; 
-    padding: 20px; 
-    border-radius: 10px; 
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: var(--secondary-color);
+  padding: 2vh 0;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  display: grid;
+  grid-gap: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
   }
-  
-  .text-center {
-    text-align: center;
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    grid-template-columns: 1fr; 
   }
-  
-  .form-control {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #fff; 
-  }
-  
-  .flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .ir-column {
-    flex-direction: column;
-  }
-  
-  input,
-  textarea {
-    margin-bottom: 10px;
-    padding: 8px;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-  }
-  
-  .btn-primary {
-    background-color: #f39c12; 
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .btn-primary:hover {
-    background-color: #d68910; 
-  }
-  
+}
+
+.card {
+  display: flex;
+  flex-direction: column; 
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px; 
+}
+
+.card-header {
+  font-weight: 600;
+  margin-bottom: 10px;
+  flex-grow: 1;
+}
+
+.card-body {
+  flex-grow: 2; 
+}
+
+h2, h3 {
+  font-family: var(--font-family);
+  text-align: center;
+  font-size: 1.5rem; 
+}
+
+.text-center {
+  text-align: center;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ir-column {
+  flex-direction: column;
+}
+
+input,
+textarea {
+  margin-bottom: 10px;
+  padding: 8px;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: 1rem;
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.btn-primary:hover {
+  background-color: #d68910;
+}
