--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -2,7 +2,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #1b2430;
+    background-color: purple;
     padding: 10px 40px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
   }
