--- a/grading-system/src/index.css
+++ b/grading-system/src/index.css
@@ -5,19 +5,18 @@
   box-sizing: border-box;
 }
 .App {
-  background: url("./components/Assets/annie-spratt-FCQrtlyevRE-unsplash.jpg")
-    no-repeat;
+  background: url("./components/Assets/mak-PSTPO61Dvvk-unsplash.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   align-items: center;
   justify-content: center;
+  font-family: poppins, sans-serif;
 }
 .content {
   justify-content: center;
   display: flex;
   align-items: center;
   min-height: 100vh;
-  font-family: poppins;
 }
 /* HEADER SECTION */
 nav {
@@ -29,7 +28,6 @@ nav {
 }
 .Navbar {
   background: transparent;
-  font-family: poppins;
   width: 100%;
   border-bottom: 2px solid #fff;
   padding: 5px 10px;
@@ -61,8 +59,11 @@ nav {
 .Navbar .links ul li a {
   text-decoration: none;
   color: #fff;
+  font-size: 20px;
+  font-weight: 500;
 }
-.Navbar .links ul li a:hover {
+
+.Navbar .links ul a:hover {
   color: orange;
 }
 
@@ -94,6 +95,12 @@ footer {
 .footer .base-div {
   background: transparent;
 }
+.footer .base-div p {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 20px;
+}
+
 /* LOGIN PAGE */
 
 .wrapper {
@@ -282,10 +289,44 @@ footer {
   color: #fff;
   border-radius: 10px;
   padding: 30px 40px;
+  width: 1290px;
+}
+
+.Home-first h1 {
+  font-size: 36px;
+  font-weight: bold;
+}
+.Home-first h1:hover {
+  color: orange;
+}
+.Home-second h2:hover {
+  color: orange;
+}
+.Home-third h2:hover {
+  color: orange;
+}
+.Home-fourth a {
+  text-decoration: none;
+  color: #fff;
+}
+.Home-fourth a:hover {
+  color: orange;
+}
+.Home-third ul li {
+  list-style-type: none;
+  margin: 10px 0;
+}
+
+/* INSTRUCTOR PAGE */
+.instructor-wrapper {
+  background: transparent;
+  color: #fff;
+  border-radius: 10px;
+  padding: 30px 40px;
   align-items: center;
   width: 95%;
 }
-.home-wrapper .second {
+.instructor-wrapper .second {
   background: transparent;
   color: #fff;
   border-radius: 10px;
@@ -298,16 +339,16 @@ footer {
   flex-flow: row wrap;
 }
 
-.home-wrapper div p {
+.instructor-wrapper div p {
   text-align: center;
   font-size: 26px;
   margin-bottom: 30px;
 }
-.home-wrapper div p:hover {
+.instructor-wrapper div p:hover {
   font-style: italic;
 }
 
-.home-wrapper .mini-div {
+.instructor-wrapper .mini-div {
   flex: 1;
   border: 1px solid #fff;
   border-radius: 10px;
@@ -320,17 +361,71 @@ footer {
   min-width: 300px;
   flex-wrap: wrap;
   text-align: center;
-  font-family: poppins;
 }
-.home-wrapper .mini-div h1 {
+.instructor-wrapper .mini-div h1 {
   font-size: 26px;
   text-align: center;
   font-style: italic;
-  font-family: poppins;
 }
-.home-wrapper .mini-div h1:hover {
+.instructor-wrapper .mini-div h1:hover {
   text-decoration: underline;
 }
-.home-wrapper .mini-div:hover {
+.instructor-wrapper .mini-div:hover {
   border: 4px solid #fff;
+}
+
+/* GRADE REPORT PAGE */
+
+.Grade-report {
+  background: transparent;
+  color: #fff;
+  border-radius: 10px;
+  padding: 30px 40px;
+  align-items: center;
+  width: 95%;
+  justify-content: center;
+}
+
+.filter {
+  margin-bottom: 15px;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+th,
+td {
+  border: none;
+  padding: 8px;
+  text-align: center;
+}
+
+/* DASHBOARD PAGE */
+.dashboard {
+  background: transparent;
+  color: #fff;
+  border-radius: 10px;
+  width: 60%;
+  padding: 30px 40px;
+}
+
+.table-div {
+  width: 100%;
+  background: transparent;
+  padding: 25px 25px;
+}
+.table-div h4:hover {
+  color: orange;
+}
+th:hover {
+  color: orange;
+}
+
+/* HELP AND SUPPORT PAGE */
+.Help {
+  background: transparent;
+  color: #fff;
+  border-radius: 10px;
+  width: 1029px;
+  padding: 30px 40px;
 }
