Worked on the login and registration page, contact page, and the help page

--- a/ass-1/src/index.css
+++ b/ass-1/src/index.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: rgb(87, 41, 41);
+  background-color: rgb(29, 7, 7);
   height: 80px;
   /* display: flex; */
   align-items: right;
@@ -51,8 +51,13 @@ ul li a:hover {
   box-shadow: 20px;
   border-radius: 5rem;
   border-color: rgb(79, 170, 22);
+  margin-bottom: 150px;
 }
-
+.card-body li {
+  font-size: 35px;
+  list-style-type: georgian;
+  font-family: "Times New Roman", Times, serif;
+}
 #card-Main {
   display: flex;
   justify-content: center;
@@ -62,9 +67,139 @@ ul li a:hover {
 .Footer {
   background-color: rgb(167, 167, 199);
   margin-bottom: -17px;
+  margin-top: 130px;
 }
 .Last-footer {
   height: 65px;
   background-color: black;
   margin-top: 0;
+}
+.p1 {
+  font-size: 35px;
+  font-family: "Times New Roman", Times, serif;
+}
+/* * {
+  background-color: rgb(158, 150, 150);
+} */
+.ul1 {
+  list-style-type: none;
+  font-size: 35px;
+  font-style: oblique;
+  font-family: cursive;
+}
+
+/* LOGIN PAGE */
+/* .Login {
+  display: flex;
+  justify-content: center;
+} */
+
+.Login {
+  text-align: center;
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-image: linear-gradient(79deg, #237883, #6fadc6 48%, #1f5f5a);
+  margin-bottom: -130px;
+}
+.auth-form-container,
+.login-form,
+.register-form {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 600px) {
+  .auth-form-container {
+    padding: 5rem;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin: 0.5rem;
+  }
+}
+
+label {
+  text-align: left;
+  padding: 0.25rem 0;
+}
+
+input {
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+}
+
+button {
+  border: none;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #7439db;
+}
+.Log {
+  border: none;
+  background-color: rgb(97, 218, 141);
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: rgb(51, 53, 153);
+  margin-top: 20px;
+  font-weight: bolder;
+  font-size: 25px;
+}
+
+.link-btn {
+  background: none;
+  color: white;
+  text-decoration: underline;
+}
+
+/* Contact Page */
+.InstructorContactPage {
+  text-align: center;
+  background-color: rgb(196, 173, 144);
+  margin-bottom: -130px;
+}
+.InstructorContactPage ul {
+  list-style-type: none;
+}
+.selected-instructor {
+  font-size: 23px;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: normal;
+}
+.ul-1 {
+  margin-bottom: 80px;
+}
+.Email {
+  background-color: #57b2d6;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  border-radius: 15px;
+  height: 80px;
+  margin-bottom: 30px;
+}
+.text {
+  border-radius: 20px;
+  border-color: rgb(196, 173, 144);
+  background-color: #ddeef0;
+  font-size: 25px;
+  height: 150px;
+  width: 550px;
+  margin-top: -11px;
+}
+.Heading3 {
+  text-align: center;
+  margin-bottom: 30px;
+  background-color: rgb(46, 114, 114);
+  font-size: 45px;
+}
+.p1 {
+  font-size: 20px;
+  font-weight: 20px;
+  font-family: cursive;
 }
