--- a/my-project/src/components/components-css/HS.css
+++ b/my-project/src/components/components-css/HS.css
@@ -1,4 +1,4 @@
-.missing-grade-form {
+.help-and-support-page {
   padding: 2rem;
   font-family: sans-serif;
 }
@@ -9,9 +9,31 @@ h2 {
   margin-bottom: 1rem;
 }
 
+p {
+  margin-bottom: 1rem;
+  line-height: 1.5;
+}
+
+.faq-list {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 2rem;
+}
+
+.faq-list li {
+  margin-bottom: 1rem;
+}
+
+.faq-list h4 {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
 form {
   display: flex;
   flex-direction: column;
+  width: 50%;
 }
 
 form label {
@@ -22,7 +44,6 @@ form input,
 form textarea {
   padding: 0.5rem;
   border: 1px solid #ccc;
-  width: 100%;
 }
 
 form button {
@@ -32,4 +53,10 @@ form button {
   background-color: #00df9a;
   color: #fff;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+  form {
+    width: 100%;
+  }
 }
