--- a/reactjs/src/components/Navbar.css
+++ b/reactjs/src/components/Navbar.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     color: black;
     background-color: #000;
+    height: 20%;
     
 }
 
@@ -45,5 +46,5 @@
 
     list-style: none;
     font-size: 15px;
-    padding:  18px;
+    
 }
