--- a/reactjs/src/routes/Home.css
+++ b/reactjs/src/routes/Home.css
@@ -1,14 +1,18 @@
+
+
+
+
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-
+    box-sizing: border-box;   
 }
-.container{
-    min-height: 90vh;
+.containers{
+    min-height: 97vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.2), rgba(4, 9, 30, 0.2)), url("../images/graduates-2.jpg");
+    background-image: linear-gradient(rgba(4, 9, 30, 0.2), rgba(4, 9, 30, 0.1)), url("../images/bbs.jpg");
     background-position: center;
     background-size: cover;
     position: relative;
+    
 }
